<resources>
    <string name="app_name">Stepaw</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dog_name">Name</string>
    <string name="dog_age">Age</string>
    <string name="dog_weight">Weight</string>
    <string name="dog_gender">Gender</string>
    <string name="dog_age_hint">Please enter the dog age</string>
    <string name="dog_name_hint">Please enter the name of the dog</string>
    <string name="dog_weight_hint">Please enter the weight of the dog</string>
    <string name="dog_male">Male</string>
    <string name="dog_female">Female</string>
    <string name="dog_save">Save</string>
    <string name="dog_others">Others</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation">Navigation</string>


    <string name="daily_report">Day</string>
    <string name="weekly_report">Week</string>
    <string name="monthly_report">Month</string>
    <string name="dog_image">Dog Image</string>
    <string name="frame">Frame</string>
    <string name="txtGreetings">Start another fun date with your walk mates! Choose your partner below.</string>
    <string name="add_new_dog">Add New Dog</string>
    <string name="ble_playground">BLE Playground</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="please_get_in_touch">Please get in touch!</string>
    <string name="contaus_text">Stepaw will answer to anything you might be wondering.</string>
    <string name="full_name_heading">Full Name</string>
    <string name="email_heading">Email</string>
    <string name="message_heading">Message</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="example_email_com">example@email.com</string>
    <string name="leave_a_message">Leave a message</string>
    <string name="send">send</string>
    <string name="next">Next</string>
    <string name="ble_status">Checking Bluetooth Status.......</string>
    <string name="ble_text">Time to link the beacon with Stepaw</string>
    <string name="current_password">Current Password</string>
    <string name="please_re_enter_your_new_password">Please re-enter your new password</string>
    <string name="please_enter_your_new_passsword">Please enter your new passsword</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="new_password">New Password</string>
    <string name="menu_scan">Start Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="toolbar_account">Account</string>
    <string name="upload_picture">Upload picture</string>
    <string name="notifications_title">Notifications</string>
    <string name="delete">Delete</string>
    <string name="delete_dog_confirmation">Do you really want to delete this dog\'s information ?</string>

</resources>